<resources>
    <string name="app_name">Movie Catalogue App</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>
    <string name="info_release">Release</string>
    <string name="Info_genre">Genre</string>
    <string name="info_overview">Overview</string>
    <string name="detail_information">Detail Information</string>
    <string name="empty_title">No Title</string>
    <string name="empty_name">No Name</string>
    <string name="empty_vote">No Vote Average</string>
    <string name="empty_release">No Release Date</string>
    <string name="empty_genres">No Genres</string>
    <string name="empty_overview">No Overview</string>
    <string name="share">Share</string>
    <string name="title_shared">Beritahu orang lain yuuk…!</string>
    <string name="text_shared">Kunjungi https://www.themoviedb.org untuk mendapatkan lebih banyak Daftar Movies dan Tv Shows.</string>
</resources>